# RedSDK

./: CMakeLists.txt  README.md
include/: R3DSDK.h  R3DSDKDefinitions.h  R3DSDKMetadata.h  R3DSDKOpenCL.h  R3DSDKStream.h  c_list.h  clist.h  decorated_string.h  keydefinition.h  rcp_parser2.h  rcp_types_public.h  rcp_utils.h  stringl.h
include/red/: R3DSDK.h  R3DSDKCuda.h  R3DSDKDecoder.h  R3DSDKDefinitions.h  R3DSDKOpenCL.h  R3DSDKRocket.h  R3DSDKStream.h  base64.h  clist.h  decorated_string.h  rcp_api.h  rcp_parameter_types_public.h  rcp_utils.h
lib/: R3DSDK-2015MD.lib  R3DSDK-2015MDd.lib  R3DSDK-2015MT.lib  R3DSDK-2015MTd.lib
src/: base64.c  c_list.c  clist.cpp  decorated_string.c  rcp_api.c  rcp_parser2.c  rcp_utils.cpp  strlcat.c  strlcpy.c
